# bookinventory

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  Sanitizers.cmake
src/lib/: book.cpp  inventory.cpp
src/lib/include/: author.hpp  book.hpp  inventory.hpp
